<resources>
    <string name="app_name">Braille converter</string>
    <string name="_9_41_string">9:41</string>
    <string name="roadshow_string">RoadShow</string>
    <string name="what_is_inside_cats_mind_string">What is inside cats mind</string>
    <string name="_0_00_string">0:00</string>
    <string name="__43_20_string">-43:20</string>
    <string name="cat_experts_dive_into_the_mind_of_the_feline_to_reveal_the_true_capabilities_of_the_pouncing_pet_in_this_captivating_and_cuddly_documentary__string">Cat experts dive into the mind of the feline to reveal the true capabilities of the pouncing pet in this captivating and cuddly documentary.</string>
    <string name="start_listening">Start listening</string>
    <string name="stop_listening">Stop listening</string>
    <string name="say_something">Say</string>
    <string name="introduction">Tap on one of the buttons to try an action</string>
    <string name="tts_hint">Write something to speech</string>
    <string name="repeat">Repeat please</string>
    <string name="input_something">Please input something to speak!</string>
    <string name="speech_not_available">Speech recognition is not available on this device. Do you want to install Google app to have speech recognition?</string>
    <string name="permission_required">You need to grant the permission to use the microphone</string>
    <string name="enable_google_voice_typing">Please enable Google Voice Typing to use speech recognition!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_stt_langs">Set Speech To Text Language</string>
    <string name="set_tts_voices">Set Text To Speech Voice</string>
    <string name="no_langs">No languages are currently available on this device</string>
    <string name="no_tts_voices">No supported voices or you\'re running on Android API &lt; 23, which does not support querying for voices.</string>
</resources>