<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Record">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/introduction" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:id="@+id/linearLayout">

        <net.gotev.speech.ui.SpeechProgressView
            android:id="@+id/progress"
            android:layout_width="120dp"
            android:layout_height="150dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:text="SAY SOME" />


    <Button
        android:id="@+id/test"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/transparent"
        android:text="Test"
        android:onClick="openFile"/>

    <Button
        android:id="@+id/speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/say_something" />



    <EditText
        android:id="@+id/textToSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/speak"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/speak"
        android:hint="@string/tts_hint" />

</RelativeLayout>
